--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 # ===========================================
+# 站点配置
+# ===========================================
+# 站点URL（用于SEO、sitemap等）
+# 开发环境: http://localhost:5173
+# 生产环境: https://japanaistock.jp
+VITE_SITE_URL=https://japanaistock.jp
+
+# ===========================================
 # API 配置
 # ===========================================
 # 开发环境：设置为后端服务器地址（如 http://localhost:3001）
