--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,9 @@
 # ===========================================
 # 重要：部署到 japanaistock.jp 时使用此配置
 
+# 站点配置
+VITE_SITE_URL=https://japanaistock.jp
+
 # API 配置 - 生产环境使用相对路径
 VITE_API_URL=
 VITE_USE_PROXY=true
