--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "server": "node server/index.js",
     "dev:all": "concurrently \"npm run server\" \"npm run dev\"",
+    "prebuild": "node scripts/generateSEOFiles.js",
     "build": "vite build",
     "start": "npm run build && NODE_ENV=production node server/index.js",
     "start:prod": "NODE_ENV=production node server/index.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit -p tsconfig.app.json",
-    "create-admin": "node server/scripts/createAdminUser.js"
+    "create-admin": "node server/scripts/createAdminUser.js",
+    "generate-seo": "node scripts/generateSEOFiles.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
